# Flask-SQLAlchemy-Template

./: Makefile  dev.sh  docker-compose.yml  pyproject.toml
src/: Dockerfile  app.py  requirements.txt  run.sh
src/templates/: layout.jinja  new.jinja  show_all.jinja
