[tool.poetry]
name = "project-management"
version = "0.1.0"
description = ""
authors = ["tropicbliss <tropicbliss@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.3"
flask-sqlalchemy = "^3.0.5"
gunicorn = "^21.2.0"
pymysql = "^1.1.0"
cryptography = "^41.0.3"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
